--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,7 +2,7 @@
 # handlers file for ansible-role-openvpn-client
 - name: Enable OpenVPN client
   systemd:
-    name: "openvpn@{{ item.name }}.service"
+    name: "openvpn-client@{{ item.name }}.service"
     state: restarted
     daemon_reload: yes
     enabled: yes
